Replace Paths.get() with Path.of()
As suggested by the documentation.